--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "devDependencies": {
     "babel-core": "^6.14.0",
     "babel-preset-es2015": "^6.14.0",
+    "gulp-babel": "^6.1.2",
+    "gulp-typescript": "^2.13.6",
     "metalsmith": "^2.2.0"
   }
 }
