--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   "devDependencies": {
     "babel-core": "^6.14.0",
     "babel-preset-es2015": "^6.14.0",
+    "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "gulp-metalsmith": "^1.0.0",
     "gulp-typescript": "^2.13.6",
-    "metalsmith": "^2.2.0"
+    "metalsmith": "^2.2.0",
+    "typescript": "^1.8.10"
   }
 }
