--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "blog",
+  "private": true,
   "version": "1.0.0",
   "description": "blog generator",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "metalsmith"
   },
   "repository": {
     "type": "git",
@@ -17,13 +19,13 @@
   },
   "homepage": "https://github.com/craigb/craigb.github.io#readme",
   "devDependencies": {
-    "babel-core": "^6.14.0",
-    "babel-preset-es2015": "^6.14.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-metalsmith": "^1.0.0",
-    "gulp-typescript": "^2.13.6",
     "metalsmith": "^2.2.0",
-    "typescript": "^1.8.10"
+    "metalsmith-collections": "^0.7.0",
+    "metalsmith-drafts": "0.0.1",
+    "metalsmith-layouts": "^1.6.5",
+    "metalsmith-markdown": "^0.2.1",
+    "metalsmith-permalinks": "^0.5.0",
+    "metalsmith-pug": "^1.1.0",
+    "pug": "^2.0.0-beta6"
   }
 }
